fix layout bugs v3

--- a/src/scss/_base/_constants.scss
+++ b/src/scss/_base/_constants.scss
@@ -2,5 +2,5 @@
 $color-black: #261C00;
 $color-white: #FCFBF7;
 $color-yellow: #F4B000;
-$color-grey-dark: #918F8A;
-$color-grey-light: #BFBFBF;
+$color-grey-dark: #918f8a;
+$color-grey-light: #bfbfbf;
