--- a/src/scss/_base/_theme.scss
+++ b/src/scss/_base/_theme.scss
@@ -6,9 +6,9 @@
   --active-button: #FCFBF7;
 
   //BARS
-  --bright-bar: radial-gradient(91.67% 122.17% at 69.17% -11.17%, #FFA300 0%, #2D1C00 100%);
+  --bright-bar: radial-gradient(81.14% 100% at 50% 0%, #FFA300 0%, #2D1C00 100%);
   --base-bar: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .8) 100%), radial-gradient(149.08% 93.3% at 38.75% 72.1%, #000 0%, #231900 .01%, #4D4D4D 100%);
-  --shadow-bright-bar: inset 0 0 20px 0 rgba(255, 162, 0, .4), inset -1px 1px 1px 0 rgba(255, 255, 255, .4);
+  --shadow-bright-bar: inset -1px 1px 1px rgba(255, 255, 255, 0.4), inset 0 6px 15px rgba(255, 162, 0, 0.5);
   --shadow-base-bar: inset 0 0 20px 0 rgba(103, 103, 103, .6), inset -1px 1px 1px 0 rgba(255, 255, 255, .2);
 
   //DIAGRAM
@@ -58,11 +58,11 @@
   --bright-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, .56) 81.25%, rgba(255, 239, 153, .32) 100%);
   --pale-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(255, 184, 0, .24) 81.25%, rgba(255, 239, 153, .12) 100%);
   --dark-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(191, 191, 191, .345) 82.81%, rgba(228, 228, 228, .1) 92.19%);
-  --light-radial: radial-gradient(49.84% 49.84% at 49.84% 50.16%, rgba(166, 166, 166, .1725) 82.81%, rgba(203, 203, 203, .05) 92.19%);
+  --light-radial: radial-gradient(rgba(151, 151, 151, 0.5) 0%, rgba(41, 41, 41, 0.5) 100%);
   --bright-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .9);
   --pale-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(255, 176, 57, .4);
   --dark-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(131, 131, 131, .6);
-  --light-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5), inset 0 0 20px rgba(105, 105, 105, .2);
+  --light-radial-shadow: inset -1px 1px 1px rgba(255, 255, 255, .5);
 
   //CARDS
   --hover-card: linear-gradient(180deg, rgba(244, 244, 244, .9) .82%, #E9E9E9 100%, rgba(234, 234, 234, 0) 100%);
