--- a/src/scss/_layouts/_vote.scss
+++ b/src/scss/_layouts/_vote.scss
@@ -114,7 +114,7 @@
     &:focus,
     &:active {
       svg {
-        fill: $color-grey-dark;
+        fill: #c4c4c4;
       }
     }
 
